--- a/templates/application.html
+++ b/templates/application.html
@@ -1,31 +1,42 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <title></title>
+        <link href="{% static 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css' %}" rel="stylesheet">
+        <link href="{% static 'https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css' %}" rel="stylesheet">
+    
+        <!-- Libraries Stylesheet -->
+        <link href="{% static 'lib/animate/animate.min.css' %}" rel="stylesheet">
+        <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
+    
+        <!-- Customized Bootstrap Stylesheet -->
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    
+        <!-- Template Stylesheet -->
+        <link href="{% static 'css/style.css' %}" rel="stylesheet">
+        <link href="{% static 'css/style2.css' %}" rel="stylesheet">
     </head>
-    <body>
-        <div>
-            {% if form.errors %}
-            {{form.errors}}
-            {% endif %}
-        <form method="POST" action="">
-            {% csrf_token %}
-            <div>
-                {{form.time}}
-            </div>
-            <div>
-                {{form.age}}
-            </div>
-            <div>
-                {{form.country}}
-            </div>
-            {% for message in messages %}
-            <span style="color: green;">{{message}}</span>
-            {% endfor %}
-            <div>
-                <button type="submit">Apply</button>
-            </div>
-        </form>
+    <body style="width: 20; height: 30px;">
+        <div style="text-align: center; justify-content: center; align-items: center;">
+            <form method="POST" action="">
+                {% csrf_token %}
+                <div>
+                    {{form.time}}
+                </div>
+                <div>
+                    {{form.age}}
+                </div>
+                <div>
+                    {{form.country}}
+                </div>
+                {% for message in messages %}
+                <span style="color: green;">{{message}}</span>
+                {% endfor %}
+                <div>
+                    <button type="submit">Apply</button>
+                </div>
+            </form>
         </div>
     </body>
 </html>
