--- a/templates/index.html
+++ b/templates/index.html
@@ -246,7 +246,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="{{course.image.url}}" alt="">
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">Read More</a>
+                                <a class="btn btn-outline-primary border-2" href="{% url 'course' %}">Read More</a>
                             </div>
                         </div>
                     </div>
