--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -1,9 +1,16 @@
 input{
-    width: 300px;
-    height: 50px;
+    width: 700px;
+    height: 80px;
+    border-radius: 10px;
+    text-align: center;
 }
 
 body{
     font-size: 25px;
-    line-height: 100px;
+    line-height: 150px;
+}
+
+select{
+    width: 500;
+    height: 80px;
 }
